BrndBot/web/static_resources/user/css/style_detail_overlay-1.css
/* ... */
.changeImage{
    cursor: pointer;
}
#uploadimage{
    cursor: pointer;
}
#gotoimageeditor{
    cursor: pointer;
}
.imgsize83{
    width:83%;
}
.imgsize99{
    width:99%;
}
.imgsize{
    width: auto;
    min-width: 100px;
    max-width: 494px;
    height: auto;
    max-height:312px;
    min-height: 200px
    /*height: 240px;*/
}
.galImage-name {
    font-size: 14px;
    color: #5F6775;
    font-weight: 600;
}
.galImage-description {
    font-size: 14px;
    color: #5F6775;
    font-weight: 400;
    margin-top: 10px;
}
.imageGallery-container {
    box-sizing: border-box;
    padding-left: 15px;
    padding-right: 15px;
    width: 250px;
    margin-top: 30px;
}
.add-button22 {
    background-color: #0F76A6;
    color: #ffffff;
    cursor: pointer;
}
.pop-up-container-galleryselect {
    width: 88%;
    padding-bottom: 45px;
    background-color: #ffffff;
    border-top-left-radius: 3px;
    border-top-right-radius: 3px;
    border: 1px solid #F9FAFC;
    margin-left: 5%;
    box-sizing: border-box;
    overflow: auto;
}
.pop-up-header {
    background-color: #FFFFFF;
    overflow: auto;
    border-bottom: 1px #CCC solid;
    padding: 0px 30px 0px 0px;
}
.pop-up-title-gallery {
    text-align: left;
    padding: 13px 0px 0px 20px;
}
.pop-up-title-h1-gallery {
    color: #2A3D47;
    font-size: 18px;
    margin-top: 6px;
}
.pop-up-inner-gallery {
    padding-left: 30px;
    padding-right: 30px;
    overflow-y: auto;
    max-height: 480px;
    min-height:440px;
    /*min-height: 480px;*/
}
.imageGallery-inner-popup {
    margin: auto;
    width: 98%;
    overflow: auto;
}
.imageUpload-container {
    width: 60%;
    margin: auto;
    padding-top: 60px;
}
.imageGallery-popup {
    box-sizing: border-box;
    padding-left: 15px;
    padding-right: 15px;
    width: 200px;
    margin-top: 30px;
}
.imageGallery-card {
    border: solid 2px #D5DADF;
    border-radius: 4px;
    box-sizing: border-box;
    width: 100%;
    margin-bottom: 3px;
}
.imageGallery-card:hover{ border: solid 2px #0F76A6;}
.galCard-content-popup {
    height: 100px;
    padding: 10px 15px 10px 10px;
}
.galCard-image {
    height: 100px;
}
.line-divider-notop {
    border-bottom: 1px solid #D5DADF;
    margin-top: 7px;
    margin-bottom: 15px;
}
.button-description {
    font-size: 14px;
    font-weight: 600;
    font-family: sans-serif;
    margin-top: 10px;
    text-align: center;
    color: #5F6775;
}
.post-button-icon {
    margin: auto;
    cursor: pointer;
    width: 60px;
    height: 60px;
    margin-left: 27px;
    margin-top: 2px;
}
.image-selection-button {
    width: 100%;
    height: 100px;
    border: solid 1px #D5DADF;
    border-radius: 4px;
    box-sizing: border-box;
    padding-top: 18px;
    padding-left: 38px;
}
.pushright {
    margin-right: 30px;
}
.schedule-button-icon {
    margin-left: 20px;
    cursor: pointer;
    width: 60px;
    height: 60px;
}
#postorschedule,#posttofb,#schedule,#schedulepost{
    cursor: pointer;    
}
.pop-up-container1 {
    padding-bottom: 30px;
    background-color: #ffffff;
    border-radius: 3px;
    border: 1px solid #F9FAFC;
    margin-left: auto;
    margin-right: auto;
    margin-top: 60px;
    box-sizing: border-box;
    height: 280px;
}
.image-selection-button:hover
{
    border: solid 1px #0F76A6;
}
.popup-section-header {
    font-size: 14px;
    font-weight: 600;
    font-family: sans-serif;
    margin-top: 10px;
    text-align: left;
    color: #737D84;
}
.input-field-textfield {
    height: 30px;
    background-color: #F9F9F9;
    border: 1px solid #d5dadf;
    padding: 6px 10px 3px 10px;
    margin-top: 10px;
    box-sizing: border-box;
    /*color: #cccccc;*/
    color: #000000;
}
.width20
{
    width:20% !important;
}
.width40
{
    width:40%;
}
.width45
{
    width:45% !important;
}
.input-field-textfield2
{
    height: 30px;
    background-color: #F9F9F9;
    border: 1px solid #d5dadf;
    padding: 6px 10px 3px 10px;
    margin-top: 10px;
    box-sizing: border-box;
    color: #2D4355;
}
.pop-up-inner1 {
    padding-left: 30px;
    padding-right: 30px;
    margin-top: 30px;
    height: 402px !important;
    overflow-y: scroll;
    width: 90%;
}
.algnmnt {
    color:white;
    padding-left: 43%;
    padding-top: 10px;
}
#socialscheduleid,.algnmnt{
    cursor: pointer;
}
.chooseChannelSelection-icon {
    width: 15px;
    height: 15px;
    border: 2px solid #979797;
    border-radius: 3px;
    margin-top: 15px;
    margin-right: 20px;
}
.nav-elements-icon1 {
    border-top: 1px solid #203c4f;
    display: block;
    line-height: 53px;
    list-style: none;
    margin: 0;
    width: 100%;
    padding: 0px;
    padding-top: 6px;
    width: 48px;
    height: 42px;
    margin: auto;
}
div#editor {
    margin-left: 23px;
}

.dropdown-label{
 line-height: 100%;
    margin: 0px 0px 0px 12px;
    font-size: 14px;
    font-weight: 500;
    color: rgb(63,63,66);
    line-height: 30px;


    
}

.dropdown-label-active{
 line-height: 100%;
    margin: 0px 0px 0px 12px;
    font-size: 14px;
    font-weight: 600;
    color: #0F76A6;
    line-height: 30px;
  
 
}
.font12{
    font-size: 12px;
    color:red;
}
.font20px
{
    font-size: 20px;
}

.padright60px{
    padding-right: 60px;
}


/*************************** arfa start code ************************/

@media screen and (max-width: 1230px) {
.width40 {
    width: 100% !important;
}
}
/**************************** arfa end code ************************/


.imageNamecenter{
    width:100%;
    text-align: center;
    margin-top: 45px;
    margin-left: auto;
    margin-right: auto;
}

.BBoverlay-content{
  height: calc(100vh - 100px);
  width: 100%;
  overflow-y: scroll;
  display: block;
}

.BBsaved-action-header-bar{
  padding-top: 20px;
  padding-bottom: 20px;
  width: 900px;
  border-bottom: 1px solid #E2E3E7; 
  padding-left: 90px;
  padding-right: 30px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  position: relative;
  box-sizing: border-box;
}
/* ... */

